crates/zendriver-mcp/tests/snapshots/schema_snapshots__lifecycle_open_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::lifecycle::OpenInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: OpenInput
description: "Input for `browser_open`."
type: object
properties:
  block_trackers:
    description: "Enable the bundled curated tracker/fingerprinter blocklist (passive\nthird-party fingerprinters + cross-site trackers; excludes anti-bot\nchallenge vendors). Off by default."
    type:
      - boolean
      - "null"
  geo_auto:
    description: "Auto-derive `locale`/`languages`/`timezone` from the exit IP via a\nproxied probe to an IP-geolocation service (default `ip-api.com`).\nOpt-in; makes at most ONE outbound HTTP request, at launch, and only\nwhen this is `true`. Mirrors `proxy` above when both are set, so the\nprobe reports the same exit IP Chrome will actually use. The resolved\ntimezone is the EXACT IANA zone the probe reports for the exit IP\n(not a country-representative one), so multi-timezone countries (US,\nRU, CA, AU, BR, ...) get the visitor's real local zone. Overridden by\nan explicit `persona`/locale, which also skips the probe. Always\npresent in the schema so the wire shape is feature-stable; only takes\neffect when the server is built with the `geo` feature (otherwise\nignored — a warning is logged)."
    type: boolean
    default: false
  geo_endpoint:
    description: "Override the geo-probe endpoint (default `http://ip-api.com/json`).\nOnly meaningful together with `geo_auto: true`; ignored otherwise.\nSame feature gating as `geo_auto`. Mirrors `proxy` above, same as the\nbundled default endpoint — the probe against the custom endpoint is\nrouted through the same upstream proxy Chrome uses, so its exit IP\nmatches."
    type:
      - string
      - "null"
  gpu_backend:
    description: "GPU backend Chrome renders WebGL / WebGPU with (default: `disabled`).\n\n`disabled` keeps zendriver's historical flags. `swift_shader` forces a\nsoftware rasterizer. `native` uses the host GPU through the platform's\nANGLE backend, giving a fully coherent GPU fingerprint — but it\nrequires a real GPU and reports **the host's** device, not a spoofed\none. There is no automatic fallback."
    $ref: "#/$defs/GpuBackendSchema"
    default: disabled
  headless:
    description: "Run Chrome with `--headless=new` (default: `true`)."
    type: boolean
    default: true
  input_profile:
    description: "Select the input-timing profile for synthesized keyboard/mouse\nevents, independent of `stealth_profile`. When unset, the default\nfollows the resolved stealth profile (mirrors\n`BrowserBuilder::resolved_input_profile()`): a spoofed stealth\nprofile (`spoof_macos`/`spoof_linux`/`spoof_windows`) implies\n`coherent` (human-paced typing, jittery mouse motion), while\n`auto`/`native` stealth implies `native` (zero-overhead,\ndeterministic timing). Pass `native` or `coherent` explicitly to pin\nthe input timing regardless of the stealth setting."
    anyOf:
      - $ref: "#/$defs/InputProfileChoice"
      - type: "null"
    default: ~
  persona:
    description: "A fingerprint Persona JSON (as produced by `browser_fingerprint_generate`\nor hand-built). Parsed via `Persona::try_from_json`. Opaque on the wire."
  preferences:
    description: "Chrome profile preferences merged into `Default/Preferences` at launch\n(dotted keys → nested objects). See `BrowserBuilder::preference`."
    type:
      - object
      - "null"
    additionalProperties: true
  proxy:
    description: "Route the browser through an upstream proxy\n(`scheme://[user:pass@]host:port`). Userinfo is auto-split into proxy\nauth credentials and answered via the `Fetch.authRequired` handshake\n(requires the `interception` feature — without it the credentials are\nsimply not auto-wired). See `BrowserBuilder::proxy`."
    type:
      - string
      - "null"
  stealth_profile:
    description: "Override the session's default stealth profile for this launch.\nWhen `None`, the session-wide default (set via CLI / construct time)\nis used."
    anyOf:
      - $ref: "#/$defs/StealthProfileChoice"
      - type: "null"
    default: ~
  tracker_blocklist:
    description: "Custom tracker-blocklist source (url | file | inline domains). Supplying\nthis implicitly enables blocking; combine with `block_trackers: true`\nto also include the bundled list."
    anyOf:
      - $ref: "#/$defs/TrackerBlocklist"
      - type: "null"
additionalProperties: false
$defs:
  GpuBackendSchema:
    description: "Schema-only mirror of [`zendriver::GpuBackend`], which lives in\n`zendriver-stealth` and doesn't derive `schemars::JsonSchema` (a\ndependency that crate has no other reason to take on). Never\nconstructed — referenced only via `#[schemars(with = \"GpuBackendSchema\")]`\nso the generator can describe the field's shape without requiring the\nreal type to implement the trait. Variant names/casing must track\n[`zendriver::GpuBackend`] exactly."
    type: string
    enum:
      - disabled
      - swift_shader
      - native
  InputProfileChoice:
    description: "Input-timing profile choice carried over the MCP wire.\n\nWire mirror of `zendriver::stealth::InputProfile`'s two presets.\nDecoupled from [`StealthProfileChoice`] — an explicit choice here always\nwins over anything stealth would otherwise imply. When `browser_open`'s\n`input_profile` field is left unset, the *effective* profile instead\nfollows the resolved stealth profile (spoofed stealth implies\n`Coherent`, `auto`/`native` stealth implies `Native`) — see\n`crate::tools::lifecycle::input_profile_choice_for`. This type's own\n`#[default]` (`Native`) is not consulted on that unset path; nothing in\nthis crate currently calls `InputProfileChoice::default()`."
    oneOf:
      - description: "Zero-overhead, deterministic timing (`InputProfile::native`). Default."
        type: string
        const: native
      - description: "Non-mechanical, humanized timing (`InputProfile::coherent`) — human-\npaced typing and jittery mouse motion."
        type: string
        const: coherent
  StealthProfileChoice:
    description: "Stealth profile choice carried over the MCP wire.\n\nConcrete `StealthProfile` resolution happens inside the lifecycle\nhandler (it depends on platform detection that only matters at launch\ntime); the wire-level enum stays stable and platform-agnostic."
    oneOf:
      - description: "Defer to `zendriver_stealth::StealthProfile::native()` (auto-detect\nplatform via `sysinfo`)."
        type: string
        const: auto
      - description: "Force native (same as `Auto`, but explicit)."
        type: string
        const: native
      - description: Spoof a macOS fingerprint regardless of host platform.
        type: string
        const: spoof_macos
      - description: Spoof a Linux fingerprint regardless of host platform.
        type: string
        const: spoof_linux
      - description: Spoof a Windows fingerprint regardless of host platform.
        type: string
        const: spoof_windows
  TrackerBlocklist:
    description: "A custom tracker-blocklist source for `browser_open`.\n\nOne of: a remote `url` (fetched+cached at launch), a local `file` path, or\ninline `domains`. Supplying any source implicitly enables blocking."
    oneOf:
      - description: Fetch + cache a newline-delimited host list from this URL.
        type: object
        properties:
          source:
            type: string
            const: url
          url:
            type: string
        additionalProperties: false
        required:
          - source
          - url
      - description: Read a newline-delimited host list from this local file path.
        type: object
        properties:
          path:
            type: string
          source:
            type: string
            const: file
        additionalProperties: false
        required:
          - source
          - path
      - description: Block these hostnames directly.
        type: object
        properties:
          domains:
            type: array
            items:
              type: string
          source:
            type: string
            const: domains
        additionalProperties: false
        required:
          - source
          - domains
