crates/zendriver-mcp/tests/snapshots/schema_snapshots__lifecycle_open_out.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::lifecycle::OpenOutput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: OpenOutput
description: "Output of `browser_open`."
type: object
properties:
  chrome_version:
    description: "Detected Chrome product string (e.g. `\"Chrome/148.0.7778.181\"`), from\nCDP `Browser.getVersion` via [`zendriver::Browser::version`].\nBest-effort: empty if the query fails (a debug log is emitted, but\n`browser_open` itself never fails because of it)."
    type: string
  gpu_backend:
    description: Effective GPU backend for the launched browser.
    $ref: "#/$defs/GpuBackendSchema"
  headless:
    description: Effective headless flag for the launched browser.
    type: boolean
  input_profile:
    description: "Effective input-timing profile for the launched browser — the\nresolved value, not the raw request. When `input_profile` wasn't\nset on input, this reflects what the stealth profile implied\n(`coherent` for spoofed stealth, `native` for `auto`/`native`\nstealth); when it was set, the explicit choice always wins."
    $ref: "#/$defs/InputProfileChoice"
  profile:
    description: Effective stealth profile for the launched browser.
    $ref: "#/$defs/StealthProfileChoice"
required:
  - chrome_version
  - headless
  - gpu_backend
  - profile
  - input_profile
$defs:
  GpuBackendSchema:
    description: "Schema-only mirror of [`zendriver::GpuBackend`], which lives in\n`zendriver-stealth` and doesn't derive `schemars::JsonSchema` (a\ndependency that crate has no other reason to take on). Never\nconstructed — referenced only via `#[schemars(with = \"GpuBackendSchema\")]`\nso the generator can describe the field's shape without requiring the\nreal type to implement the trait. Variant names/casing must track\n[`zendriver::GpuBackend`] exactly."
    type: string
    enum:
      - disabled
      - swift_shader
      - native
  InputProfileChoice:
    description: "Input-timing profile choice carried over the MCP wire.\n\nWire mirror of `zendriver::stealth::InputProfile`'s two presets.\nDecoupled from [`StealthProfileChoice`] — an explicit choice here always\nwins over anything stealth would otherwise imply. When `browser_open`'s\n`input_profile` field is left unset, the *effective* profile instead\nfollows the resolved stealth profile (spoofed stealth implies\n`Coherent`, `auto`/`native` stealth implies `Native`) — see\n`crate::tools::lifecycle::input_profile_choice_for`. This type's own\n`#[default]` (`Native`) is not consulted on that unset path; nothing in\nthis crate currently calls `InputProfileChoice::default()`."
    oneOf:
      - description: "Zero-overhead, deterministic timing (`InputProfile::native`). Default."
        type: string
        const: native
      - description: "Non-mechanical, humanized timing (`InputProfile::coherent`) — human-\npaced typing and jittery mouse motion."
        type: string
        const: coherent
  StealthProfileChoice:
    description: "Stealth profile choice carried over the MCP wire.\n\nConcrete `StealthProfile` resolution happens inside the lifecycle\nhandler (it depends on platform detection that only matters at launch\ntime); the wire-level enum stays stable and platform-agnostic."
    oneOf:
      - description: "Defer to `zendriver_stealth::StealthProfile::native()` (auto-detect\nplatform via `sysinfo`)."
        type: string
        const: auto
      - description: "Force native (same as `Auto`, but explicit)."
        type: string
        const: native
      - description: Spoof a macOS fingerprint regardless of host platform.
        type: string
        const: spoof_macos
      - description: Spoof a Linux fingerprint regardless of host platform.
        type: string
        const: spoof_linux
      - description: Spoof a Windows fingerprint regardless of host platform.
        type: string
        const: spoof_windows
